# cleaning_robot

./: frames_2025-06-22_15.32.02.gv  frames_2025-06-22_15.40.42.gv  frames_2025-06-22_15.40.56.gv  status.json
custom_objects.v1i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
custom_objects.v1i.yolov8/test/labels/: bathtub_20250622_023058_079_2_jpg.rf.6f98ad46b493d1c2a9c9f8f6b3c7194d.txt  bathtub_20250622_023058_749_4_jpg.rf.efa8d2282667ba089e6d7faf1003aae1.txt  bathtub_20250622_023115_115_53_jpg.rf.3acd358c2cea936576a0de710e8d9366.txt  bathtub_20250622_023121_124_71_jpg.rf.3eb65acb341aa8c56f37489dbad07714.txt  bathtub_20250622_023121_459_72_jpg.rf.0a2acf759a56f4f9ca441afedff058c6.txt  bathtub_20250622_023131_146_101_jpg.rf.c67988e12a6e137970f1f1e88b288909.txt  bathtub_20250622_023145_520_144_jpg.rf.260c8791ac1ace882fcf5871c096f277.txt  bathtub_20250622_023146_188_146_jpg.rf.6c26d027c6c664b2b27e683ef943c09e.txt  bathtub_20250622_023148_858_154_jpg.rf.b4c861bf68edad8666a671d28f7d79b7.txt  (+77 more)
custom_objects.v1i.yolov8/train/: labels.cache
custom_objects.v1i.yolov8/valid/: labels.cache
src/cleaning_controller_node/: package.xml  setup.cfg  setup.py
src/flask_bridge_node/: package.xml  setup.cfg  setup.py
src/image_saver/: package.xml  setup.py
src/room_navigation_node/: package.xml  setup.cfg  setup.py
src/room_type_detector/: package.xml  setup.cfg  setup.py
src/room_type_detector/room_type_detector/: room_type_detector.py
src/sam_bot_nav2_gz/: CMakeLists.txt  package.xml  setup.py
src/sam_bot_nav2_gz/config/: brush_controllers.yaml  nav2_params.yaml  robot_controllers.yaml
src/sam_bot_nav2_gz/launch/: autonomous_cleaning.launch.py  complete_navigation.launch.py  display.launch.py  explore.launch.py  web_control_with_sim.launch.py  yolo_inference.launch.py
src/sam_bot_nav2_gz/models/best/data/: 0  105  106  108  111  115  12  13  132  135  141  147  153  154  156  158  16  165  169  174  177  178  181  183  184  188  19  204  205  206  210  217  218  219  22  224  231  234  235  238  (+54 more)
src/sam_bot_nav2_gz/models/custom_yolo/best/.data/: serialization_id
src/sam_bot_nav2_gz/models/custom_yolo/best/data/: 10  102  103  104  109  112  117  118  120  121  122  123  126  128  129  134  140  144  146  148  15  150  151  152  157  163  164  166  170  172  176  180  187  195  198  199  20  201  202  207  (+68 more)
src/sam_bot_nav2_gz/models/extracted_model/best/: data.pkl
src/sam_bot_nav2_gz/models/extracted_model/best/data/: 1  100  110  114  116  124  127  130  133  136  138  139  14  142  145  159  160  162  168  171  175  18  182  186  189  190  192  193  194  196  2  200  213  214  216  222  230  236  237  242  (+54 more)
src/sam_bot_nav2_gz/msg/: DetectedObjects.msg  Detection.msg
src/sam_bot_nav2_gz/rviz/: urdf_config.rviz
src/sam_bot_nav2_gz/src/description/: sam_bot_description.urdf
src/sam_bot_nav2_gz/world/: empty.sdf
src/yolo_inference_node/: package.xml  setup.cfg  setup.py
web_interface/: app.py
web_interface/templates/: home.html  index.html  status.html
(+781 files in other folders)
