<?xml version="1.0"?>
<package format="3">
  <name>room_type_detector</name>
  <version>0.0.0</version>
  <description>Detects room type based on objects identified by YOLO.</description>
  <maintainer email="sudhirtiwari0916@gmail.com">palak</maintainer>
  <license>MIT</license>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

